# uva-26-spring-gen-agent-students-projectA

./: CLAUDE.md  README.md
team-00/: CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  requirements.txt
team-00/data/: DATA.md
team-00/src/: evaluate.py  run_demo.py  server.py
team-00/tests/: test_agent.py  test_knowledge.py  test_pii_redactor.py
team-07/: CLAUDE.md  IMPROVEMENT_PLAN.md  README.md
team-07/src/: .gitignore  check_api.py  interface.py  main.py
team-10/: .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  requirements.txt
team-10/data/: medical_qa.json
team-10/src/: app.py  backends.py  config.py  experiments.py  main.py  portal_setup.sh  red_team.py  reporting.py  run.py  streamlit_app.py
team-11/: .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  requirements.txt
team-6/: CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  requirements.txt
team-6/data/: README.md
team-6/src/: Untitled.ipynb  lingshu_server.py  planner.py  run.py  run.sh
team-9/: .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  requirements.txt
team-envcheck/: .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  demo.py  demo_llm.py  main.py  pyproject.toml
team-envcheck/.cursor/commands/: envcheck.diagnose.md
team-envcheck/.cursor/rules/: envcheck-project.mdc
team-envcheck/docs/: demo-walkthrough.md  envcheck-command-explanation.md
team-envcheck/envcheck/: __init__.py  knowledge_base.py  parser.py  scanner.py  version_detector.py
team-envcheck/test_cases/: __init__.py  cases.py
team-w05/: CLAUDE.md  IMPROVEMENT_PLAN.md  README.md
(+76 files in other folders)
